--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,8 @@ github_username:  wilmosfang
 permalink: /:year/:month/:day/:title/
 safe: false
 markdown: kramdown
-highlighter: pygments
+#highlighter: pygments
+highlighter: rouge
 paginate: 15
 paginate_path: "page:num"
 gems: [jekyll-paginate]
