add  _posts/2017-07-16-install-jekyll.md

--- a/_config.yml
+++ b/_config.yml
@@ -54,5 +54,7 @@ tag_dir: tag/
 excerpt_separator: "\n\n\n\n"
 
 # paginate
-gems: [jekyll-paginate]
+#gems: [jekyll-paginate]
+plugins: [jekyll-paginate]
+
 paginate: 15
